separate the lstm and pgbm in train and test

--- a/notebooks/Comp_models.ipynb
+++ b/notebooks/Comp_models.ipynb
@@ -182,11 +182,11 @@
     "    * using the chik model. \n",
     "    '''\n",
     "    \n",
-    "    d1 = get_preds(f'{PATH_LSTM}/lstm_{city}_chik_predictions_msle.pkl', label = 'dengue_model')\n",
+    "    d1 = get_preds(f'{PATH_LSTM}/lstm_{city}_chik_dengue_pred.pkl', label = 'dengue_model')\n",
     "    \n",
-    "    d2 = get_preds(f'{PATH_LSTM}/tl_{city}_chik_transf_msle.pkl', label = 'transf_model')\n",
+    "    d2 = get_preds(f'{PATH_LSTM}/lstm_{city}_chik_transf_pred.pkl', label = 'transf_model')\n",
     "\n",
-    "    d3 = get_preds(f'{PATH_LSTM}/lstm_{city}_chik_msle.pkl', label = 'chik_model')\n",
+    "    d3 = get_preds(f'{PATH_LSTM}/lstm_{city}_chik_pred.pkl', label = 'chik_model')\n",
     "    \n",
     "    d = d1.merge(d2, left_index=True, right_index=True).merge(d3, \n",
     "    left_index=True, right_index=True)\n",
@@ -211,9 +211,9 @@
     "    \n",
     "    d1 = get_preds_pgbm(f'{PATH_PGBM}/pgbm_{city}_chik_cross_predictions.pkl', label = 'dengue_model')\n",
     "    \n",
-    "    d2 = get_preds(f'{PATH_LSTM}/tl_{city}_chik_transf_msle.pkl', label = 'transf_model')\n",
+    "    d2 = get_preds(f'{PATH_LSTM}/lstm_{city}_chik_transf_msle.pkl', label = 'transf_model')\n",
     "\n",
-    "    d3 = get_preds_pgbm(f'{PATH_PGBM}/pgbm_{city}_chik_all_predictions.pkl', label = 'chik_model')\n",
+    "    d3 = get_preds_pgbm(f'{PATH_PGBM}/pgbm_{city}_chik_pred.pkl', label = 'chik_model')\n",
     "    \n",
     "    d = d1.merge(d2, left_index=True, right_index=True).merge(d3, \n",
     "    left_index=True, right_index=True)\n",
@@ -691,8 +691,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "13e6fbff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pgbm.sklearn import HistGradientBoostingRegressor, crps_ensemble\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "import numpy as np\n",
+    "X, y = fetch_california_housing(return_X_y=True)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=0)\n",
+    "model = HistGradientBoostingRegressor(random_state=0).fit(X_train, y_train)  \n",
+    "yhat_point, yhat_point_std = model.predict(X_test, return_std=True)\n",
+    "yhat_dist = model.sample(yhat_point, yhat_point_std, n_estimates=1000, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "adfe96dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000, 2064)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yhat_dist.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9679f0e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2064,)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yhat_point.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e011f05d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.6354464 , 1.55819322, 0.61074353, ..., 0.93990757, 2.03371098,\n",
+       "       0.02426655])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.percentile(yhat_dist, 0.025, axis=0).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "590a61ea",
    "metadata": {},
    "outputs": [],
    "source": []
