Delete big file

--- a/forecast/shapefile of macro.ipynb
+++ b/forecast/shapefile of macro.ipynb
@@ -492,6 +492,27 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "13a7d0e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(119, 4)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_new.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "db3519df",
    "metadata": {},
    "outputs": [
@@ -519,7 +540,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -540,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "270e3e8c",
    "metadata": {},
    "outputs": [
